; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/mb862xx/extr_mb862xxfb.c_mb862xxfb_show_dispregs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/mb862xx/extr_mb862xxfb.c_mb862xxfb_show_dispregs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.fb_info = type { %struct.mb862xxfb_par* }
%struct.mb862xxfb_par = type { i32 }

@GC_DCM0 = common dso_local global i32 0, align 4
@GC_L0DY_L0DX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"%08x = %08x\0A\00", align 1
@disp = common dso_local global i32 0, align 4
@GC_CPM_CUTC = common dso_local global i32 0, align 4
@GC_CUY1_CUX1 = common dso_local global i32 0, align 4
@GC_DCM1 = common dso_local global i32 0, align 4
@GC_L0WH_L0WW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, %struct.device_attribute*, i8*)* @mb862xxfb_show_dispregs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mb862xxfb_show_dispregs(%struct.device* %0, %struct.device_attribute* %1, i8* %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca %struct.device_attribute*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.fb_info*, align 8
  %8 = alloca %struct.mb862xxfb_par*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %5, align 8
  store i8* %2, i8** %6, align 8
  %11 = load %struct.device*, %struct.device** %4, align 8
  %12 = call %struct.fb_info* @dev_get_drvdata(%struct.device* %11)
  store %struct.fb_info* %12, %struct.fb_info** %7, align 8
  %13 = load %struct.fb_info*, %struct.fb_info** %7, align 8
  %14 = getelementptr inbounds %struct.fb_info, %struct.fb_info* %13, i32 0, i32 0
  %15 = load %struct.mb862xxfb_par*, %struct.mb862xxfb_par** %14, align 8
  store %struct.mb862xxfb_par* %15, %struct.mb862xxfb_par** %8, align 8
  %16 = load i8*, i8** %6, align 8
  store i8* %16, i8** %9, align 8
  %17 = load i32, i32* @GC_DCM0, align 4
  store i32 %17, i32* %10, align 4
  br label %18

18:                                               ; preds = %32, %3
  %19 = load i32, i32* %10, align 4
  %20 = load i32, i32* @GC_L0DY_L0DX, align 4
  %21 = icmp ule i32 %19, %20
  br i1 %21, label %22, label %35

22:                                               ; preds = %18
  %23 = load i8*, i8** %9, align 8
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* @disp, align 4
  %26 = load i32, i32* %10, align 4
  %27 = call i32 @inreg(i32 %25, i32 %26)
  %28 = call i32 @sprintf(i8* %23, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %24, i32 %27)
  %29 = load i8*, i8** %9, align 8
  %30 = sext i32 %28 to i64
  %31 = getelementptr inbounds i8, i8* %29, i64 %30
  store i8* %31, i8** %9, align 8
  br label %32

32:                                               ; preds = %22
  %33 = load i32, i32* %10, align 4
  %34 = add i32 %33, 4
  store i32 %34, i32* %10, align 4
  br label %18

35:                                               ; preds = %18
  %36 = load i32, i32* @GC_CPM_CUTC, align 4
  store i32 %36, i32* %10, align 4
  br label %37

37:                                               ; preds = %51, %35
  %38 = load i32, i32* %10, align 4
  %39 = load i32, i32* @GC_CUY1_CUX1, align 4
  %40 = icmp ule i32 %38, %39
  br i1 %40, label %41, label %54

41:                                               ; preds = %37
  %42 = load i8*, i8** %9, align 8
  %43 = load i32, i32* %10, align 4
  %44 = load i32, i32* @disp, align 4
  %45 = load i32, i32* %10, align 4
  %46 = call i32 @inreg(i32 %44, i32 %45)
  %47 = call i32 @sprintf(i8* %42, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %43, i32 %46)
  %48 = load i8*, i8** %9, align 8
  %49 = sext i32 %47 to i64
  %50 = getelementptr inbounds i8, i8* %48, i64 %49
  store i8* %50, i8** %9, align 8
  br label %51

51:                                               ; preds = %41
  %52 = load i32, i32* %10, align 4
  %53 = add i32 %52, 4
  store i32 %53, i32* %10, align 4
  br label %37

54:                                               ; preds = %37
  %55 = load i32, i32* @GC_DCM1, align 4
  store i32 %55, i32* %10, align 4
  br label %56

56:                                               ; preds = %70, %54
  %57 = load i32, i32* %10, align 4
  %58 = load i32, i32* @GC_L0WH_L0WW, align 4
  %59 = icmp ule i32 %57, %58
  br i1 %59, label %60, label %73

60:                                               ; preds = %56
  %61 = load i8*, i8** %9, align 8
  %62 = load i32, i32* %10, align 4
  %63 = load i32, i32* @disp, align 4
  %64 = load i32, i32* %10, align 4
  %65 = call i32 @inreg(i32 %63, i32 %64)
  %66 = call i32 @sprintf(i8* %61, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %62, i32 %65)
  %67 = load i8*, i8** %9, align 8
  %68 = sext i32 %66 to i64
  %69 = getelementptr inbounds i8, i8* %67, i64 %68
  store i8* %69, i8** %9, align 8
  br label %70

70:                                               ; preds = %60
  %71 = load i32, i32* %10, align 4
  %72 = add i32 %71, 4
  store i32 %72, i32* %10, align 4
  br label %56

73:                                               ; preds = %56
  %74 = load i8*, i8** %9, align 8
  %75 = load i8*, i8** %6, align 8
  %76 = ptrtoint i8* %74 to i64
  %77 = ptrtoint i8* %75 to i64
  %78 = sub i64 %76, %77
  %79 = trunc i64 %78 to i32
  ret i32 %79
}

declare dso_local %struct.fb_info* @dev_get_drvdata(%struct.device*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32) #1

declare dso_local i32 @inreg(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
